--- a/slack/slack_notify.yml
+++ b/slack/slack_notify.yml
@@ -5,7 +5,7 @@
   tasks:
   - name: Send notification message via Slack
     community.general.slack:
-      token: {{ slack_token }}
-      msg: {{ MESSAGE }}
+      token: "{{ slack_token }}"
+      msg: "{{ MESSAGE }}"
       channel: #ansible-bot
     delegate_to: localhost
