added ask for variables on slack jt

--- a/aap2-labs-setup.yml
+++ b/aap2-labs-setup.yml
@@ -148,6 +148,7 @@
       project: "AQ - Automated Management"
       playbook: "{{ slack_playbook }}"
       execution_environment: "EE-custom"
+      ask_variables_on_launch: true
       credentials:
         - "AQ - SLACK"
       extra_vars:
